# NotesAI

./: .gitignore  model.ipynb  pyproject.toml
notesai/: __main__.py
